<resources>
    <string name="app_name">Android HID Keyboard</string>
    <string name="KeyText1" translatable="false">Esc</string>
    <string name="KeyCode1" translatable="false">29</string>
    <string name="KeyText2" translatable="false">F1</string>
    <string name="KeyCode2" translatable="false">3a</string>
    <string name="KeyText3" translatable="false">F2</string>
    <string name="KeyCode3" translatable="false">3b</string>
    <string name="KeyText4" translatable="false">F3</string>
    <string name="KeyCode4" translatable="false">3c</string>
    <string name="KeyText5" translatable="false">F4</string>
    <string name="KeyCode5" translatable="false">3d</string>
    <string name="KeyText6" translatable="false">F5</string>
    <string name="KeyCode6" translatable="false">3e</string>
    <string name="KeyText7" translatable="false">F6</string>
    <string name="KeyCode7" translatable="false">3f</string>
    <string name="KeyText8" translatable="false">F7</string>
    <string name="KeyCode8" translatable="false">40</string>
    <string name="KeyText9" translatable="false">F8</string>
    <string name="KeyCode9" translatable="false">41</string>
    <string name="KeyText10" translatable="false">F9</string>
    <string name="KeyCode10" translatable="false">42</string>
    <string name="KeyText11" translatable="false">F10</string>
    <string name="KeyCode11" translatable="false">43</string>
    <string name="KeyText12" translatable="false">F11</string>
    <string name="KeyCode12" translatable="false">44</string>
    <string name="KeyText13" translatable="false">F12</string>
    <string name="KeyCode13" translatable="false">45</string>
    <string name="KeyText14" translatable="false">`&#160;&#160;~</string>
    <string name="KeyCode14" translatable="false">35</string>
    <string name="KeyText15" translatable="false">1&#160;&#160;!</string>
    <string name="KeyCode15" translatable="false">1e</string>
    <string name="KeyText16" translatable="false">2&#160;&#160;@</string>
    <string name="KeyCode16" translatable="false">1f</string>
    <string name="KeyText17" translatable="false">3&#160;&#160;#</string>
    <string name="KeyCode17" translatable="false">20</string>
    <string name="KeyText18" translatable="false">4&#160;&#160;$</string>
    <string name="KeyCode18" translatable="false">21</string>
    <string name="KeyText19" translatable="false">5&#160;&#160;%</string>
    <string name="KeyCode19" translatable="false">22</string>
    <string name="KeyText20" translatable="false">6&#160;&#160;^</string>
    <string name="KeyCode20" translatable="false">23</string>
    <string name="KeyText21" translatable="false">7&#160;&#160;&amp;</string>
    <string name="KeyCode21" translatable="false">24</string>
    <string name="KeyText22" translatable="false">8&#160;&#160;*</string>
    <string name="KeyCode22" translatable="false">25</string>
    <string name="KeyText23" translatable="false">9&#160;&#160;(</string>
    <string name="KeyCode23" translatable="false">26</string>
    <string name="KeyText24" translatable="false">0&#160;&#160;)</string>
    <string name="KeyCode24" translatable="false">27</string>
    <string name="KeyText25" translatable="false">-&#160;&#160;_</string>
    <string name="KeyCode25" translatable="false">2d</string>
    <string name="KeyText26" translatable="false">=&#160;&#160;+</string>
    <string name="KeyCode26" translatable="false">2e</string>
    <string name="KeyText27" translatable="false">Backspace</string>
    <string name="KeyCode27" translatable="false">2a</string>
    <string name="KeyText28" translatable="false">Tab</string>
    <string name="KeyCode28" translatable="false">2b</string>
    <string name="KeyText29" translatable="false">Q</string>
    <string name="KeyCode29" translatable="false">14</string>
    <string name="KeyText30" translatable="false">W</string>
    <string name="KeyCode30" translatable="false">1a</string>
    <string name="KeyText31" translatable="false">E</string>
    <string name="KeyCode31" translatable="false">08</string>
    <string name="KeyText32" translatable="false">R</string>
    <string name="KeyCode32" translatable="false">15</string>
    <string name="KeyText33" translatable="false">T</string>
    <string name="KeyCode33" translatable="false">17</string>
    <string name="KeyText34" translatable="false">Y</string>
    <string name="KeyCode34" translatable="false">1c</string>
    <string name="KeyText35" translatable="false">U</string>
    <string name="KeyCode35" translatable="false">18</string>
    <string name="KeyText36" translatable="false">I</string>
    <string name="KeyCode36" translatable="false">0c</string>
    <string name="KeyText37" translatable="false">O</string>
    <string name="KeyCode37" translatable="false">12</string>
    <string name="KeyText38" translatable="false">P</string>
    <string name="KeyCode38" translatable="false">13</string>
    <string name="KeyText39" translatable="false">[&#160;&#160;{</string>
    <string name="KeyCode39" translatable="false">2f</string>
    <string name="KeyText40" translatable="false">]&#160;&#160;}</string>
    <string name="KeyCode40" translatable="false">30</string>
    <string name="KeyText41" translatable="false">\\&#160;&#160;|</string>
    <string name="KeyCode41" translatable="false">31</string>
    <string name="KeyText42" translatable="false">CapsLock</string>
    <string name="KeyCode42" translatable="false">39</string>
    <string name="KeyText43" translatable="false">A</string>
    <string name="KeyCode43" translatable="false">04</string>
    <string name="KeyText44" translatable="false">S</string>
    <string name="KeyCode44" translatable="false">16</string>
    <string name="KeyText45" translatable="false">D</string>
    <string name="KeyCode45" translatable="false">07</string>
    <string name="KeyText46" translatable="false">F</string>
    <string name="KeyCode46" translatable="false">09</string>
    <string name="KeyText47" translatable="false">G</string>
    <string name="KeyCode47" translatable="false">0a</string>
    <string name="KeyText48" translatable="false">H</string>
    <string name="KeyCode48" translatable="false">0b</string>
    <string name="KeyText49" translatable="false">J</string>
    <string name="KeyCode49" translatable="false">0d</string>
    <string name="KeyText50" translatable="false">K</string>
    <string name="KeyCode50" translatable="false">0e</string>
    <string name="KeyText51" translatable="false">L</string>
    <string name="KeyCode51" translatable="false">0f</string>
    <string name="KeyText52" translatable="false">;&#160;&#160;:</string>
    <string name="KeyCode52" translatable="false">33</string>
    <string name="KeyText53" translatable="false">\'&#160;&#160;\"</string>
    <string name="KeyCode53" translatable="false">34</string>
    <string name="KeyText54" translatable="false">Enter</string>
    <string name="KeyCode54" translatable="false">28</string>
    <string name="KeyText55" translatable="false">Shift</string>
    <string name="KeyCode55" translatable="false">02</string>
    <string name="KeyText56" translatable="false">Z</string>
    <string name="KeyCode56" translatable="false">1d</string>
    <string name="KeyText57" translatable="false">X</string>
    <string name="KeyCode57" translatable="false">1b</string>
    <string name="KeyText58" translatable="false">C</string>
    <string name="KeyCode58" translatable="false">06</string>
    <string name="KeyText59" translatable="false">V</string>
    <string name="KeyCode59" translatable="false">19</string>
    <string name="KeyText60" translatable="false">B</string>
    <string name="KeyCode60" translatable="false">05</string>
    <string name="KeyText61" translatable="false">N</string>
    <string name="KeyCode61" translatable="false">11</string>
    <string name="KeyText62" translatable="false">M</string>
    <string name="KeyCode62" translatable="false">10</string>
    <string name="KeyText63" translatable="false">,&#160;&#160;&lt;</string>
    <string name="KeyCode63" translatable="false">36</string>
    <string name="KeyText64" translatable="false">.&#160;&#160;&gt;</string>
    <string name="KeyCode64" translatable="false">37</string>
    <string name="KeyText65" translatable="false">/&#160;&#160;?</string>
    <string name="KeyCode65" translatable="false">38</string>
    <string name="KeyText66" translatable="false">Shift</string>
    <string name="KeyCode66" translatable="false">20</string>
    <string name="KeyText67" translatable="false">Ctrl</string>
    <string name="KeyCode67" translatable="false">01</string>
    <string name="KeyText68" translatable="false">⊞</string>
    <string name="KeyCode68" translatable="false">08</string>
    <string name="KeyText69" translatable="false">Alt</string>
    <string name="KeyCode69" translatable="false">04</string>
    <string name="KeyText70" translatable="false">SPACE</string>
    <string name="KeyCode70" translatable="false">2c</string>
    <string name="KeyText71" translatable="false">Alt</string>
    <string name="KeyCode71" translatable="false">40</string>
    <string name="KeyText72" translatable="false">Win</string>
    <string name="KeyCode72" translatable="false">80</string>
    <string name="KeyText73" translatable="false">☰</string>
    <string name="KeyCode73" translatable="false">65</string>
    <string name="KeyText74" translatable="false">Ctrl</string>
    <string name="KeyCode74" translatable="false">10</string>
    <string name="KeyText75" translatable="false">Print Screen</string>
    <string name="KeyCode75" translatable="false">46</string>
    <string name="KeyText76" translatable="false">Scroll Lock</string>
    <string name="KeyCode76" translatable="false">47</string>
    <string name="KeyText77" translatable="false">PAUSE</string>
    <string name="KeyCode77" translatable="false">48</string>
    <string name="KeyText78" translatable="false">Insert</string>
    <string name="KeyCode78" translatable="false">49</string>
    <string name="KeyText79" translatable="false">Home</string>
    <string name="KeyCode79" translatable="false">4a</string>
    <string name="KeyText80" translatable="false">PgUp</string>
    <string name="KeyCode80" translatable="false">4b</string>
    <string name="KeyText81" translatable="false">Delete</string>
    <string name="KeyCode81" translatable="false">4c</string>
    <string name="KeyText82" translatable="false">End</string>
    <string name="KeyCode82" translatable="false">4d</string>
    <string name="KeyText83" translatable="false">PgDn</string>
    <string name="KeyCode83" translatable="false">4e</string>
    <string name="KeyText84" translatable="false">▲</string>
    <string name="KeyCode84" translatable="false">52</string>
    <string name="KeyText85" translatable="false">◀</string>
    <string name="KeyCode85" translatable="false">50</string>
    <string name="KeyText86" translatable="false">▼</string>
    <string name="KeyCode86" translatable="false">51</string>
    <string name="KeyText87" translatable="false">▶</string>
    <string name="KeyCode87" translatable="false">4f</string>
    <string name="KeyTextFn" translatable="false">Fn</string>
    <string name="FnSpace">Mouse mode</string>
    <string name="FnEnter" translatable="false">Ctrl + Alt + Del</string>
    <string name="MouseLeftKeyCode" translatable="false">1</string>
    <string name="MouseRightKeyCode" translatable="false">2</string>
    <string name="MouseMiddleKeyCode" translatable="false">4</string>
    <string name="msg_e_root">Check root permission failed.</string>
    <string name="msg_e_hid">HID function not turned on?</string>
    <string name="touch_area">Touch Area</string>
    <string name="MouseLeftKey">Left</string>
    <string name="MouseRightKey">Right</string>
    <string name="MouseMiddleKey">Middle</string>
    <string name="tvMoveSpeed">Mouse Move Speed</string>
    <string name="BtnBackText">Back</string>
</resources>